# glue-demo

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  glue_cloudformation.yml  pyproject.toml
.github/workflows/: release.yml
glue_scripts/: microservices_etl.py
