[tool.black]
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \venv
    | \.aws-sam
    | _build
    | buck-out
    | build
    | dist
    | migrations
    | node_modules
    | dependencies
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.poetry]
name = "etl"
version = "1.0.0"
description = "Demo for Glue ETL"
authors = ["Chris Maillefaud <chrismaillefaud@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dj-database-url = "*"
numpy = "*"
pandas = "*"
psycopg2-binary = "*"
SQLAlchemy = "*"
SQLAlchemy-Utils = "*"
arrow = "*"
aws_lambda_context = "*"
loguru = "*"
typing_extensions = "*"
pyspark = "==2.4.3"
pyspark-stubs = "==2.4"

[tool.poetry.dev-dependencies]
black = "*"
bandit = "*"
ipython = "*"
isort = "*"
ipdb = "*"
pre-commit = "*"
pytest-black = "*"
pytest-cov = "*"
pytest-flake8 = "*"
pytest-freezegun = "*"
pytest-mock = "*"
pytest-mypy = "*"
pytest-pydocstyle = "*"
pytest-watch = "*"
pytest-xdist ="*"
wheel = "*"
boto3 = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
